# loc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/actions/loc-rs/: action.yml
src/: cli.rs  counter.rs  display.rs  export.rs  extractor.rs  language.rs  main.rs  models.rs
src/cli/: mod.rs
src/config/: mod.rs
src/counter/: mod.rs
src/display/: mod.rs
src/export/: csv.rs  html.rs  json.rs  mod.rs
src/extractors/: cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  nim.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  tree_sitter.rs
src/language/: mod.rs
src/models/: mod.rs
tests/: cli.rs  core.rs  export.rs  integration.rs
tests/common/: mod.rs
