[package]
name = "loc"
version = "0.1.4"
edition = "2024"
authors = ["kelexine <https://github.com/kelexine>"]
description = "Advanced Lines of Code counter with function extraction, git integration, and parallel processing"
license = "MIT"
keywords = ["loc", "lines-of-code", "code-analysis", "cli"]

[[bin]]
name = "loc"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
rayon       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
csv         = "1"
chrono      = { version = "0.4", features = ["serde"] }
colored     = "2"
walkdir     = "2"
regex       = "1"
anyhow      = "1"
once_cell   = "1"

[dev-dependencies]
tempfile   = "3"
serde_json = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
